0.8 Build 8
--- Build 8 ---
20260825

* AI更新：
    * 再次优化了二次碰撞检测，修复了一些bug
    * 修复了AI翻袋带防守永远打不进的bug
    * 调整了AI的准确度
    * 增加了已超分但还有破百可以打时的心理状态
* 显示AI的白球落点范围
* 加入了AI对战时，自动开始下一局的功能
* 修复了AI击球时有可能不显示架杆的问题